style(all): overflow issues

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -67,6 +67,7 @@ body {
   background-color: var(--white-color);
 
   min-height: 100vh;
+  min-height: -webkit-fill-available;
   width: 100%;
 }
 
@@ -104,6 +105,14 @@ h2 {
   border-bottom: 3px solid var(--grey-color);
 }
 
+.overflow h2 {
+  margin: 0 20px var(--default-padding) var(--default-padding);
+}
+
+.overflow--white h2 {
+  margin-bottom: 0;
+}
+
 /* Heading 3 */
 h3 {
   font-size: 16px; font-size: 1.6rem;
@@ -135,7 +144,7 @@ ul, ol {
   #UTILITIES
 ============================================================================= */
 .hide{ display: none!important; }
-.box-shadow>* {
+.box-shadow > * {
   position: relative;
   z-index: 10;
 }
@@ -177,6 +186,11 @@ ul, ol {
 .grid--img .box-shadow::before {
   background-color: transparent;
   z-index: 20;
+  min-height: 100%;
+}
+
+.grid--img .box-shadow::after {
+  min-height: 100%;
 }
 
 .yellow-bg { background-color: var(--primary-color);}
@@ -387,8 +401,65 @@ header::after {
   #MAIN
 ============================================================================= */
 main {
-  padding: var(--default-padding) 0;
+  position: relative;
+
+  padding: var(--default-padding) 0 100px 0px;
   margin: 0 var(--default-padding);
+
+  min-height: calc(100vh - 200px);
+
+  /* ??? */
+  /* min-height: -webkit-fill-available; */
+}
+
+.yellow-bg .overflow main {
+  margin: 0;
+}
+
+  .yellow-bg .overflow main .grid--list__team-members {
+    padding: 0px var(--default-padding);
+  }
+
+.overflow main {
+  position: initial;
+
+  width: 100%;
+  height: calc(100vh - 200px);
+
+  margin: 0;
+  padding: 0 0 100px 0;
+}
+
+.overflow--white main {
+   padding: var(--default-padding) 0 100px 0; 
+}
+
+.overflow--teams main {
+    padding: 0 0 140px 0;
+}
+
+.yellow-bg .overflow main {
+    padding: 0px 0px 110px 0px;
+}
+
+.overflow main::before {
+  content: "";
+  position: absolute;
+
+  left: 0;
+  right: 0;
+  bottom: 100px;
+
+  width: 100%;
+  height: 3px;
+
+  background-color: var(--secondary-color);
+
+  z-index: 50;
+}
+
+.overflow--teams main::before {
+    bottom: 140px;
 }
 
 .grid {
@@ -427,12 +498,47 @@ main {
   grid-template-columns: 1fr;
 }
 
+.overflow .grid--list, .overflow .grid--img {
+  position:relative;
+  overflow-y: scroll;
+  overflow-x: visible;
+
+  padding: var(--default-padding) var(--default-padding) 30px var(--default-padding);
+}
+
+.overflow--teams .grid--list {
+  height: 100%!important;
+}
+
+.yellow-bg .overflow .grid--list, .yellow-bg .overflow .grid--img {
+  position:relative;
+  overflow-y: scroll;
+  overflow-x: visible;
+
+  padding: var(--default-padding);
+}
+
+.overflow .grid--list {
+  height: calc(100% - 39px);
+}
+
+.yellow-bg .overflow .grid--list {
+  height: calc(100% - 40px);
+}
+
+.overflow .grid--img {
+  height: 100%;
+  grid-auto-rows: min-content;
+}
+
   .grid--list li a, .grid--list .box-shadow {
     display: flex;
     align-items: center;
     flex-direction: row;
 
     padding: 14px;
+    height: 100%;
+    
     color: var(--secondary-color);
 
     background-color: var(--white-color);
@@ -465,7 +571,7 @@ main {
     }
 
 .grid--overview {
-  grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
 }
 
   .grid--overview li a {
@@ -484,6 +590,7 @@ main {
       padding: 10px 0px;
 
       font-weight: 700;
+      font-size: 14px; font-size: 1.4rem;
       text-align: center;
       color: var(--white-color);
 
@@ -493,7 +600,7 @@ main {
     }
 
     .grid--overview li a > div {
-      padding: 20px 14px;
+      padding: 18px 14px;
     }
 
 .grid--img {
@@ -504,6 +611,7 @@ main {
     position: relative;
     padding: 0;
     cursor: default;
+    /* min-height: 100%; */
   }
 
   .grid--img li a:hover {
@@ -513,6 +621,7 @@ main {
     .grid--img li a > img {
       width: 100%;
       height: 100%;
+      min-height: 60px;
 
       object-fit: cover;
       border-radius: var(--border-radius);
@@ -920,11 +1029,13 @@ button:hover, .btn:hover, .btn--small:hover {
 
 .btn--container__center {
   position: absolute;
-  left: 50%;
+
   top: 50%;
+  left: 0;
+  right: 0;
   bottom: auto;
 
-  transform: translate(-50%, -50%);
+  transform: translateY(calc(-50% - 30px));
 }
 
 .btn--subtle {
